Add User object and creating the route for the corresponding requests
